// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardsPurchasedScreen should render with data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardsPurchasedScreen
    data={
      Array [
        Object {
          "cost": "123",
          "day": "Monday",
          "id": "id",
          "month": "April",
          "onPress": [MockFunction],
          "reward": "string",
          "status": "pending",
        },
      ]
    }
    onLeftTabPress={[MockFunction]}
    onRightTabPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Pad
          height={40}
        />,
        <Component
          style={
            Object {
              "alignItems": "center",
              "marginTop": 34,
            }
          }
        >
          <RewardTabs
            activeTabIndex={1}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />
        </Component>,
        <Component
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 30,
            }
          }
        >
          <FlatList
            data={
              Array [
                Object {
                  "cost": "123",
                  "day": "Monday",
                  "id": "id",
                  "month": "April",
                  "onPress": [MockFunction],
                  "reward": "string",
                  "status": "pending",
                },
              ]
            }
            disableVirtualization={false}
            horizontal={false}
            initialNumToRender={10}
            keyExtractor={[Function]}
            maxToRenderPerBatch={10}
            numColumns={1}
            onEndReachedThreshold={2}
            renderItem={[Function]}
            scrollEventThrottle={50}
            updateCellsBatchingPeriod={50}
            windowSize={21}
          />
        </Component>,
        <Pad
          height={80}
        />,
      ],
      "style": Object {
        "flex": 1,
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 40,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <RewardTabs
            activeTabIndex={1}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />,
          "style": Object {
            "alignItems": "center",
            "marginTop": 34,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeTabIndex": 1,
            "onLeftTabPress": [MockFunction],
            "onRightTabPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <FlatList
            data={
              Array [
                Object {
                  "cost": "123",
                  "day": "Monday",
                  "id": "id",
                  "month": "April",
                  "onPress": [MockFunction],
                  "reward": "string",
                  "status": "pending",
                },
              ]
            }
            disableVirtualization={false}
            horizontal={false}
            initialNumToRender={10}
            keyExtractor={[Function]}
            maxToRenderPerBatch={10}
            numColumns={1}
            onEndReachedThreshold={2}
            renderItem={[Function]}
            scrollEventThrottle={50}
            updateCellsBatchingPeriod={50}
            windowSize={21}
          />,
          "style": Object {
            "flex": 1,
            "paddingHorizontal": 30,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "data": Array [
              Object {
                "cost": "123",
                "day": "Monday",
                "id": "id",
                "month": "April",
                "onPress": [MockFunction],
                "reward": "string",
                "status": "pending",
              },
            ],
            "disableVirtualization": false,
            "horizontal": false,
            "initialNumToRender": 10,
            "keyExtractor": [Function],
            "maxToRenderPerBatch": 10,
            "numColumns": 1,
            "onEndReachedThreshold": 2,
            "renderItem": [Function],
            "scrollEventThrottle": 50,
            "updateCellsBatchingPeriod": 50,
            "windowSize": 21,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 80,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Pad
            height={40}
          />,
          <Component
            style={
              Object {
                "alignItems": "center",
                "marginTop": 34,
              }
            }
          >
            <RewardTabs
              activeTabIndex={1}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />
          </Component>,
          <Component
            style={
              Object {
                "flex": 1,
                "paddingHorizontal": 30,
              }
            }
          >
            <FlatList
              data={
                Array [
                  Object {
                    "cost": "123",
                    "day": "Monday",
                    "id": "id",
                    "month": "April",
                    "onPress": [MockFunction],
                    "reward": "string",
                    "status": "pending",
                  },
                ]
              }
              disableVirtualization={false}
              horizontal={false}
              initialNumToRender={10}
              keyExtractor={[Function]}
              maxToRenderPerBatch={10}
              numColumns={1}
              onEndReachedThreshold={2}
              renderItem={[Function]}
              scrollEventThrottle={50}
              updateCellsBatchingPeriod={50}
              windowSize={21}
            />
          </Component>,
          <Pad
            height={80}
          />,
        ],
        "style": Object {
          "flex": 1,
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 40,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <RewardTabs
              activeTabIndex={1}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />,
            "style": Object {
              "alignItems": "center",
              "marginTop": 34,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeTabIndex": 1,
              "onLeftTabPress": [MockFunction],
              "onRightTabPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <FlatList
              data={
                Array [
                  Object {
                    "cost": "123",
                    "day": "Monday",
                    "id": "id",
                    "month": "April",
                    "onPress": [MockFunction],
                    "reward": "string",
                    "status": "pending",
                  },
                ]
              }
              disableVirtualization={false}
              horizontal={false}
              initialNumToRender={10}
              keyExtractor={[Function]}
              maxToRenderPerBatch={10}
              numColumns={1}
              onEndReachedThreshold={2}
              renderItem={[Function]}
              scrollEventThrottle={50}
              updateCellsBatchingPeriod={50}
              windowSize={21}
            />,
            "style": Object {
              "flex": 1,
              "paddingHorizontal": 30,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "data": Array [
                Object {
                  "cost": "123",
                  "day": "Monday",
                  "id": "id",
                  "month": "April",
                  "onPress": [MockFunction],
                  "reward": "string",
                  "status": "pending",
                },
              ],
              "disableVirtualization": false,
              "horizontal": false,
              "initialNumToRender": 10,
              "keyExtractor": [Function],
              "maxToRenderPerBatch": 10,
              "numColumns": 1,
              "onEndReachedThreshold": 2,
              "renderItem": [Function],
              "scrollEventThrottle": 50,
              "updateCellsBatchingPeriod": 50,
              "windowSize": 21,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 80,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`RewardsPurchasedScreen should render without data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardsPurchasedScreen
    data={Array []}
    onLeftTabPress={[MockFunction]}
    onRightTabPress={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Pad
          height={40}
        />,
        <Component
          style={
            Object {
              "alignItems": "center",
              "marginTop": 34,
            }
          }
        >
          <RewardTabs
            activeTabIndex={1}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />
        </Component>,
        <Component
          style={
            Object {
              "flex": 1,
              "paddingHorizontal": 30,
            }
          }
        >
          <PurchasesEmpty
            onCtaPress={[MockFunction]}
          />
        </Component>,
        <Pad
          height={80}
        />,
      ],
      "style": Object {
        "flex": 1,
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 40,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <RewardTabs
            activeTabIndex={1}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />,
          "style": Object {
            "alignItems": "center",
            "marginTop": 34,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeTabIndex": 1,
            "onLeftTabPress": [MockFunction],
            "onRightTabPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <PurchasesEmpty
            onCtaPress={[MockFunction]}
          />,
          "style": Object {
            "flex": 1,
            "paddingHorizontal": 30,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "onCtaPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": 80,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Pad
            height={40}
          />,
          <Component
            style={
              Object {
                "alignItems": "center",
                "marginTop": 34,
              }
            }
          >
            <RewardTabs
              activeTabIndex={1}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />
          </Component>,
          <Component
            style={
              Object {
                "flex": 1,
                "paddingHorizontal": 30,
              }
            }
          >
            <PurchasesEmpty
              onCtaPress={[MockFunction]}
            />
          </Component>,
          <Pad
            height={80}
          />,
        ],
        "style": Object {
          "flex": 1,
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 40,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <RewardTabs
              activeTabIndex={1}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />,
            "style": Object {
              "alignItems": "center",
              "marginTop": 34,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeTabIndex": 1,
              "onLeftTabPress": [MockFunction],
              "onRightTabPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <PurchasesEmpty
              onCtaPress={[MockFunction]}
            />,
            "style": Object {
              "flex": 1,
              "paddingHorizontal": 30,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "onCtaPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 80,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
